--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "src/index.js",
-            "use": "@vercel/node"
+    "functions": {
+        "src/index.js": {
+            "runtime": "nodejs20.x",
+            "maxDuration": 30
         }
-    ],
+    },
     "routes": [
         {
             "src": "/(.*)",
@@ -14,10 +14,5 @@
     ],
     "env": {
         "NODE_ENV": "production"
-    },
-    "functions": {
-        "src/index.js": {
-            "maxDuration": 30
-        }
     }
 }
