--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
     "version": 2,
-    "functions": {
-        "src/index.js": {
-            "runtime": "nodejs20.x",
-            "maxDuration": 30
+    "builds": [
+        {
+            "src": "src/index.js",
+            "use": "@vercel/node"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "src/index.js"
         }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+    ]
 }
